--- a/user.html
+++ b/user.html
@@ -40,7 +40,7 @@
     <main class="container">
         <div>
             <div>
-                <h1>User</h1>
+                <h1>Users</h1>
             </div>
         </div>
     </main>
