--- a/report.html
+++ b/report.html
@@ -5,11 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reports</title>
-    <link rel="stylesheet" href="home.css">
-    <link rel="stylesheet" href="report.css">
+    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/report.css">
 </head>
-
-<body>
+    <body>
     <aside class="side">
         <div class="h2">
             <h2>Searchy</h2>
