--- a/setting.html
+++ b/setting.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Settings</title>
-    <link rel="stylesheet" href="home.css">
-    <link rel="stylesheet" href="setting.css">
+    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/setting.css">
 </head>
 <body>
     <aside class="side">
