--- a/user.html
+++ b/user.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User</title>
-    <link rel="stylesheet" href="home.css">
-    <link rel="stylesheet" href="user.css">
+    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/user.css">
 </head>
 <body>
     <aside class="side">
